--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
 * {
   margin: 0;
+  padding: 0%;
+}
+
+.back {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-image: url('./imagemcss.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .container {
   display: flex;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  align-items: center;
   flex-direction: column;
+  position: absolute;
+  align-items: center;
   justify-content: space-around;
-  background-image: linear-gradient(45deg, rgb(16, 5, 88), rgb(12, 162, 189), black);
-  background-attachment: fixed;
-}
+  width: 100%;
+  height: 500px;
+} 
 
 .palavrasEncontradas {
   font-size: 30px;
@@ -25,17 +33,18 @@
   color: black;
 }
 
-.enviar {
+ .enviar {
   width: 60px;
   height: 30px;
   background-color: rgb(80, 69, 153);
-  border-radius: 10%;
+  border-radius: 50px;
+  border: 5px solid transparent;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color: beige;
-}
+} 
 
 .resposta {
-  width: 500px;
+  width: 300px;
   height: 250px;
   background-color: beige;
   border-radius: 1%;
